[package]
name = "key-tone"
version = "0.1.0"
edition = "2021"

[[bin]]
name="no-console"
path="./src/main.rs"

[[bin]]
name="console"
path="./src/debug.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.1"
device_query="1.1.1"
tinyfiledialogs = "3.3.9"